[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros"] }
tracing = "0.1"

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]

[dependencies.tokio-postgres]
version = "0.7.7"
features = ["with-chrono-0_4"]
